# mpp

./: .bianbu-ci.yml  .gitignore  BUILD.gn  CMakeLists.txt  LICENSE  compile_install_completely.sh  do_test.sh  format.sh  mpp.cppcheck  pack_to_tar_gz.sh  package.xml  remove_space_end_of_line.sh
al/: CMakeLists.txt  module.c  readme.md
al/chipmedia/starfive/: sfenc_plugin.c
al/debug/: CMakeLists.txt  fake_dec_plugin.c
al/ffmpeg/: CMakeLists.txt  ffmpegdec.c  ffmpegswscale.c
al/ffmpeg/include/libavutil/: ffversion.h
al/include/: al_interface_base.h  al_interface_dec.h  al_interface_enc.h  al_interface_g2d.h  al_interface_vi.h  al_interface_vo.h  module.h
al/k1/: CMakeLists.txt
al/k1/jpu/: jpudec.c
al/k1/v2d/: v2d.c
al/k1/v2d/include/: asr_v2d_api.h
al/k1x/jpu/: jpudec.c  jpuenc.c
al/k1x/v2d/: v2d.c
al/k1x/v2d/include/: asr_v2d_type.h
al/openh264/: openh264dec.cpp
al/openmax/: CMakeLists.txt
al/openmax/include/khronos/: OMX_Audio.h  OMX_Component.h  OMX_ComponentExt.h  OMX_ContentPipe.h  OMX_Core.h  OMX_CoreExt.h  OMX_IVCommon.h  OMX_ImageExt.h  OMX_Types.h
al/openmax/starfive/: sfomxil_dec_plugin.c
al/v4l2/linlonv5v7/: linlonv5v7_buffer.c  linlonv5v7_codec.c  linlonv5v7_dec.c  linlonv5v7_enc.c  linlonv5v7_port.c
al/v4l2/linlonv5v7/include/: linlonv5v7_buffer.h  linlonv5v7_codec.h  linlonv5v7_constant.h  linlonv5v7_port.h  (+1 more)
al/v4l2/standard/: v4l2dec.c  v4l2enc.c
al/vcodec/: CMakeLists.txt
al/vcodec/chipmedia/: CMakeLists.txt
al/vcodec/ffmpeg/: ffmpegenc.c
al/vcodec/k1/: CMakeLists.txt
al/vcodec/linlonv5v7/: linlonv5v7_buffer.c  linlonv5v7_codec.c  linlonv5v7_dec.c  linlonv5v7_enc.c  linlonv5v7_mjpeg.c  linlonv5v7_port.c
al/vcodec/openh264/: CMakeLists.txt  README.md  openh264enc.cpp
al/vcodec/v4l2/: CMakeLists.txt
al/vcodec/verisilicon/: CMakeLists.txt
al/vi/: CMakeLists.txt
al/vi/file/: vi_file.c
al/vi/include/: vi_al_ops.h
al/vi/k1/: CMakeLists.txt  vi_k1.c  vi_k1.h  vi_k1_buffer.c  vi_k1_ccic.c  vi_k1_common.c  vi_k1_isp.c  vi_k1_offline.c  vi_k1_raw.c  vi_k1_sensor.c  vi_k1_virtual.c
al/vi/k3/: CMakeLists.txt  install_plugin.sh  vi_k3.c  vi_k3_v4l2.c
al/vi/v4l2/: vi_v4l2.c
al/vo/: CMakeLists.txt
al/vo/file/: vo_file.c
al/vo/sdl2/: vo_sdl2.c
al/vps/: CMakeLists.txt
al/vps/k1/: CMakeLists.txt
mpi/: CMakeLists.txt  g2d.c  module.c  sys.c  vdec.c  venc.c  vi.c  vo.c
mpi/al_module/: CMakeLists.txt
mpi/cpp/: CMakeLists.txt  cpp.c
mpi/demux/: CMakeLists.txt  demux.c  demux.h
mpi/demux/codec/: aac_utils.c  aac_utils.h  h264_utils.c  h264_utils.h  h265_utils.c  h265_utils.h
mpi/demux/common/: bit_reader.c  bit_reader.h  byte_buffer.c  byte_buffer.h  socket_utils.c  socket_utils.h  url_parser.c  url_parser.h
mpi/demux/rtp/: aac_depacketizer.c  aac_depacketizer.h  h264_depacketizer.c  h264_depacketizer.h  h265_depacketizer.c  h265_depacketizer.h  rtp_depacketizer.h  rtp_packet.c  rtp_packet.h
mpi/include/: module.h
mpi/mux/: CMakeLists.txt  mux.c  mux_common.c  mux_common.h  mux_file.c  mux_file.h  mux_mp4.c  mux_rtmp.c  mux_rtmp.h  mux_rtp.c  mux_rtsp_internal.h  mux_rtsp_server.c  mux_rtsp_server.h  mux_ts.c  mux_writer.c  mux_writer.h
mpi/stream/: mpp_queue.c  mpp_stream_manager.c
mpi/sys/: CMakeLists.txt  dma_alloc.c  mpp_shm.c  processflow.h  sys.c  vb.c
mpi/uvc/: CMakeLists.txt  uvc.c
mpi/v2d/: CMakeLists.txt  v2d.c  v2d_private_type.h
mpi/vdec/: CMakeLists.txt  vdec.c  vdec.h  vdec_api.c  vdec_capture_state.c  vdec_capture_state.h  vdec_input_retry.c  vdec_input_retry.h
mpi/venc/: CMakeLists.txt  venc.c  venc.h  venc_api.c
mpi/vi/: CMakeLists.txt  image_buffer.h  vi.c  vi_buf_mgr.c  vi_buf_mgr.h
mpi/vo/: CMakeLists.txt
sample/: CMakeLists.txt  sample_file_transcode.c  sample_multi_decode.c  sample_multi_rtsp.c  sample_mux_record.c  sample_rtsp_pull.c  sample_rtsp_relay_record.c  sample_uvc_dual_cam.c  sample_uvc_dual_stream.c  sample_uvc_record_rtmp.c  sample_uvc_record_snap.c  sample_uvc_vdec.c  sample_uvc_vdec_venc.c  sample_uvc_vdec_venc_rtsp.c  sample_vi_dual_stream.c  sample_vi_k3_4venc_bind.c  sample_vi_k3_venc_bind.c  sample_vi_record_snap.c
test/: CMakeLists.txt  g2d_test.c  readme.md  test_demux_file.c  test_demux_seek.c  test_g2d_one_frame.c  test_integration.c  test_multiproc.c  test_mux_common.c  test_rtsp_pipeline.c  test_rtsp_pull.c  test_rtsp_vdec.c  test_sys.c  test_sys_vdec_venc_one_frame.c  test_sys_vdec_venc_vdec_one_frame.c  test_sys_venc_vdec_one_frame.c  test_ts_dump.c  test_uvc.c  test_uvc_ros2_node.cpp  test_uvc_vdec.c  test_v2d.c  test_v2d_blend.c  test_v2d_boarder_fill.c  test_v2d_draw.c  test_v2d_mask.c  test_vb.c  test_vdec_file.c  test_vdec_input_retry.c  test_venc_file.c  test_vi_cpp.c  test_vi_cpp_multi_output.c  test_vi_isp_cam_api.c  test_vi_isp_cam_ros2_consumer.cpp  test_vi_isp_cam_ros2_node.cpp  test_vi_k1_cam.c  test_vi_k1_ispbypass.c  test_vi_k1_offline_addr.c  test_vi_k3_cam.c  test_vi_k3_cam_yuv.c  test_vi_venc_file.c  (+16 more)
test/assets/: input.265  test_video.ts  vi_phy0_last_frame.yuv
test/include/: argument.h  const.h  defaultparse.h  h265parse.h  parse.h
test/parse/: defaultparse.c  h264parse.c  h265parse.c  mjpegparse.c
test/ros2_mpp_isp_camera/: CMakeLists.txt  package.xml
test/ros2_mpp_msgs/: CMakeLists.txt  package.xml
test/ros2_mpp_msgs/msg/: MppVideoFrameDesc.msg
test/test_script/: vdec_test.sh
test/test_script/cases/: vdec.csv
test/vdec/: test_mjpeg_zero_dri.c  test_vdec.c  test_vdec_backpressure.c  test_vdec_resolution_change.c
test/vdec/include/: defaultparse.h  h264parse.h  h265parse.h  mjpegparse.h  parse.h
test/vdec/parse/: defaultparse.c  h264parse.c  h265parse.c  mjpegparse.c  parse.c
test/venc/: test_venc.c
utils/: CMakeLists.txt  circularbuffer.c  dataqueue.c  dmabufwrapper.c  env.c  frame.c  log.c  packet.c  resolution_utils.c  ringbuffer.c  utils.c  v4l2_utils.c
utils/include/: data.h  dataqueue.h  dmabufwrapper.h  env.h  frame.h  log.h  packet.h  para.h  resolution_utils.h  ringbuffer.h  type.h  v4l2_utils.h
utils/os/include/: os_env.h  os_log.h
utils/os/linux/: os_env.c  os_log.c
(+148 files in other folders)
