# ============================================================
# mpi - All MPI sub-module libraries
# ============================================================

add_subdirectory(sys)
add_subdirectory(al_module)
add_subdirectory(vi)
add_subdirectory(vo)
add_subdirectory(venc)
add_subdirectory(vdec)
add_subdirectory(demux)
add_subdirectory(mux)
add_subdirectory(v2d)
add_subdirectory(cpp)
add_subdirectory(uvc)

